ASN_MODULE_SOURCES=	\
	T1S1-LAES-VoP-Abstract-Syntax-Module-OID.c	\
	LAESProtocol.c	\
	EnhancedProtocol.c	\
	LaesMessage.c	\
	Answer.c	\
	CCChange.c	\
	CCClose.c	\
	CCOpen.c	\
	CCUnavailable.c	\
	Change.c	\
	Connection.c	\
	ConnectionBreak.c	\
	ConfPartyChange.c	\
	DialedDigitExtraction.c	\
	DirectSignalReporting.c	\
	MediaAndAddressReporting.c	\
	NetworkSignal.c	\
	Origination.c	\
	Redirection.c	\
	Release.c	\
	ServingSystem.c	\
	Generic.c	\
	SubjectSignal.c	\
	TerminationAttempt.c	\
	UUContent.c	\
	AddressRegistrationType.c	\
	AdmissionControlStatus.c	\
	CallIdentity.c	\
	Cause.c	\
	CCAddress.c	\
	CCDeliveryFormat.c	\
	ContentIdentifier.c	\
	CorrelationIdentifier.c	\
	DeliveryIdentifier.c	\
	ForkedCallInformation.c	\
	EncapsulatedSignalingMessage.c	\
	H225CallSignaling.c	\
	H245.c	\
	H323CallTransfer.c	\
	H323Media.c	\
	H323MediaParameterType.c	\
	IpAddress.c	\
	IPvalue.c	\
	Location.c	\
	MediaInformation.c	\
	ParameterFormat.c	\
	PartyIdentity.c	\
	PortNumber.c	\
	ProtocolSpecificParameters.c	\
	SipHeader.c	\
	SurveillanceStatus.c	\
	CurrentSurveillanceStatus.c	\
	SurveillanceStatusEventType.c	\
	FeatureManagement.c	\
	FeatureManagementType.c	\
	CCDeliveryHeaderModuleOID.c	\
	CC-APDU.c	\
	CCDeliveryHeader.c	\
	PacketDirection.c	\
	AlertingSignal.c	\
	AudibleSignal.c	\
	BearerCapability.c	\
	CaseIdentity.c	\
	CCCIdentity.c	\
	IAPSystemIdentity.c	\
	TimeStamp.c	\
	TerminalDisplayInfo.c	\
	TransitCarrierIdentity.c	\
	RedirectedFromInformation.c

ASN_MODULE_HEADERS=	\
	T1S1-LAES-VoP-Abstract-Syntax-Module-OID.h	\
	LAESProtocol.h	\
	EnhancedProtocol.h	\
	LaesMessage.h	\
	Answer.h	\
	CCChange.h	\
	CCClose.h	\
	CCOpen.h	\
	CCUnavailable.h	\
	Change.h	\
	Connection.h	\
	ConnectionBreak.h	\
	ConfPartyChange.h	\
	DialedDigitExtraction.h	\
	DirectSignalReporting.h	\
	MediaAndAddressReporting.h	\
	NetworkSignal.h	\
	Origination.h	\
	Redirection.h	\
	Release.h	\
	ServingSystem.h	\
	Generic.h	\
	SubjectSignal.h	\
	TerminationAttempt.h	\
	UUContent.h	\
	AddressRegistrationType.h	\
	AdmissionControlStatus.h	\
	CallIdentity.h	\
	Cause.h	\
	CCAddress.h	\
	CCDeliveryFormat.h	\
	ContentIdentifier.h	\
	CorrelationIdentifier.h	\
	DeliveryIdentifier.h	\
	ForkedCallInformation.h	\
	EncapsulatedSignalingMessage.h	\
	H225CallSignaling.h	\
	H245.h	\
	H323CallTransfer.h	\
	H323Media.h	\
	H323MediaParameterType.h	\
	IpAddress.h	\
	IPvalue.h	\
	Location.h	\
	MediaInformation.h	\
	ParameterFormat.h	\
	PartyIdentity.h	\
	PortNumber.h	\
	ProtocolSpecificParameters.h	\
	SipHeader.h	\
	SurveillanceStatus.h	\
	CurrentSurveillanceStatus.h	\
	SurveillanceStatusEventType.h	\
	FeatureManagement.h	\
	FeatureManagementType.h	\
	CCDeliveryHeaderModuleOID.h	\
	CC-APDU.h	\
	CCDeliveryHeader.h	\
	PacketDirection.h	\
	AlertingSignal.h	\
	AudibleSignal.h	\
	BearerCapability.h	\
	CaseIdentity.h	\
	CCCIdentity.h	\
	IAPSystemIdentity.h	\
	TimeStamp.h	\
	TerminalDisplayInfo.h	\
	TransitCarrierIdentity.h	\
	RedirectedFromInformation.h

ASN_MODULE_HEADERS+=UTF8String.h
ASN_MODULE_HEADERS+=BOOLEAN.h
ASN_MODULE_SOURCES+=BOOLEAN.c
ASN_MODULE_HEADERS+=INTEGER.h
ASN_MODULE_HEADERS+=NativeEnumerated.h
ASN_MODULE_HEADERS+=GeneralizedTime.h
ASN_MODULE_SOURCES+=GeneralizedTime.c
ASN_MODULE_SOURCES+=INTEGER.c
ASN_MODULE_HEADERS+=NULL.h
ASN_MODULE_SOURCES+=NULL.c
ASN_MODULE_SOURCES+=NativeEnumerated.c
ASN_MODULE_HEADERS+=NativeInteger.h
ASN_MODULE_SOURCES+=NativeInteger.c
ASN_MODULE_HEADERS+=OBJECT_IDENTIFIER.h
ASN_MODULE_SOURCES+=OBJECT_IDENTIFIER.c
ASN_MODULE_SOURCES+=UTF8String.c
ASN_MODULE_HEADERS+=VisibleString.h
ASN_MODULE_SOURCES+=VisibleString.c
ASN_MODULE_HEADERS+=asn_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=asn_SEQUENCE_OF.c
ASN_MODULE_HEADERS+=asn_SET_OF.h
ASN_MODULE_SOURCES+=asn_SET_OF.c
ASN_MODULE_HEADERS+=constr_CHOICE.h
ASN_MODULE_SOURCES+=constr_CHOICE.c
ASN_MODULE_HEADERS+=constr_SEQUENCE.h
ASN_MODULE_SOURCES+=constr_SEQUENCE.c
ASN_MODULE_HEADERS+=constr_SEQUENCE_OF.h
ASN_MODULE_SOURCES+=constr_SEQUENCE_OF.c
ASN_MODULE_HEADERS+=constr_SET_OF.h
ASN_MODULE_HEADERS+=constr_SET.h
ASN_MODULE_SOURCES+=constr_SET.c
ASN_MODULE_SOURCES+=constr_SET_OF.c
ASN_MODULE_HEADERS+=asn_application.h
ASN_MODULE_HEADERS+=asn_system.h
ASN_MODULE_HEADERS+=asn_codecs.h
ASN_MODULE_HEADERS+=asn_internal.h
ASN_MODULE_HEADERS+=OCTET_STRING.h
ASN_MODULE_SOURCES+=OCTET_STRING.c
ASN_MODULE_HEADERS+=BIT_STRING.h
ASN_MODULE_SOURCES+=BIT_STRING.c
ASN_MODULE_SOURCES+=asn_codecs_prim.c
ASN_MODULE_HEADERS+=asn_codecs_prim.h
ASN_MODULE_HEADERS+=ber_tlv_length.h
ASN_MODULE_SOURCES+=ber_tlv_length.c
ASN_MODULE_HEADERS+=ber_tlv_tag.h
ASN_MODULE_SOURCES+=ber_tlv_tag.c
ASN_MODULE_HEADERS+=ber_decoder.h
ASN_MODULE_SOURCES+=ber_decoder.c
ASN_MODULE_HEADERS+=der_encoder.h
ASN_MODULE_SOURCES+=der_encoder.c
ASN_MODULE_HEADERS+=constr_TYPE.h
ASN_MODULE_SOURCES+=constr_TYPE.c
ASN_MODULE_HEADERS+=constraints.h
ASN_MODULE_SOURCES+=constraints.c
ASN_MODULE_HEADERS+=xer_support.h
ASN_MODULE_SOURCES+=xer_support.c
ASN_MODULE_HEADERS+=xer_decoder.h
ASN_MODULE_SOURCES+=xer_decoder.c
ASN_MODULE_HEADERS+=xer_encoder.h
ASN_MODULE_SOURCES+=xer_encoder.c
ASN_MODULE_HEADERS+=per_support.h
ASN_MODULE_SOURCES+=per_support.c
ASN_MODULE_HEADERS+=per_decoder.h
ASN_MODULE_SOURCES+=per_decoder.c
ASN_MODULE_HEADERS+=per_encoder.h
ASN_MODULE_SOURCES+=per_encoder.c

ASN_MODULEdir = $(pkgincludedir)/T1.678/VoP

lib_LTLIBRARIES=libvop.la
libvop_la_SOURCES=$(ASN_MODULE_SOURCES) $(ASN_MODULE_HEADERS)
